# frothiq

./: .env.example  .gitignore  Dockerfile  README.es.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: databricks_deploy.md
notebooks/: 00_eda.ipynb  01_features.ipynb  02_baseline_lightgbm.ipynb  02b_baseline_fresh.ipynb  03_lstm.ipynb  04_spc.ipynb  05_whatif.ipynb
scripts/: download_data.sh
src/frothiq/: __init__.py
src/frothiq/data/: __init__.py  loader.py
src/frothiq/features/: __init__.py  pipeline.py  rolling.py
src/frothiq/models/: __init__.py
src/frothiq/models/baseline/: __init__.py  lightgbm_model.py
src/frothiq/models/deep/: __init__.py  lstm.py
src/frothiq/models/spc/: __init__.py  cusum.py  ewma.py  shewhart.py
src/frothiq/models/whatif/: __init__.py  simulator.py
src/frothiq/monitoring/: __init__.py  drift.py
src/frothiq/serving/: __init__.py  api.py  dashboard.py  schemas.py
tests/: test_cusum_ewma.py  test_drift.py  test_features.py  test_loader.py  test_lstm.py  test_serving.py  test_spc.py  test_whatif.py
